src/test/ui/nll/user-annotations/dump-adt-brace-struct.stderr
error: user substs: UserSubsts { substs: [&ReStatic u32], user_self_ty: None }
  --> $DIR/dump-adt-brace-struct.rs:20:5
   |
LL |     SomeStruct::<&'static u32> { t: &22 };
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to previous error

